@@ -1,4 +1,5 @@
 AC_INIT(configure.in)
 CONFIG_RULES
+AC_PROG_AWK
 AC_PROG_INSTALL
 V5_AC_OUTPUT_MAKEFILE
